# SortVisualizer

./: .gitmodules  CMakeLists.txt  README.md
SortVisualizer/: App.h  CMakeLists.txt  Manager.cpp  Manager.h  SortAlgorithm.h  SortVisualizer.cpp  SortVisualizer.h
SortVisualizer/Algorithms/: BubbleSort.h  CocktailSort.h  GnomeSort.h  Includes.h  InsertionSort.h  PancakeSort.h  SelectionSort.h
